tests/tokenizer/invalid_or.expected
<string>:1:1: error: bitwise or not supported
|
^
